--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -11,16 +11,16 @@
 
   <h2><%= @list.name %></h2>
   <div class="movie-wrapper">
-    <% @list.movies.each do |movie| %>
+    <% @list.bookmarks.each do |bookmark| %>
       <div class="card-movie">
-        <img src=<%= movie.poster_url %> alt="Movie poster" />
+        <img src=<%= bookmark.movie.poster_url %> alt="Movie poster" />
         <div class="card-movie-info">
           <div>
-            <h2><%= movie.title %></h2>
-            <p><%= movie.overview %></p>
+            <h2><%= bookmark.movie.title %></h2>
+            <p><%= bookmark.movie.overview %></p>
           </div>
-          <h2 class="card-movie-rating"><%= movie.rating %></h2>
-          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-movie-icon avatar-bordered" />
+          <h2 class="card-movie-rating"><%= bookmark.movie.rating %></h2>
+          <%= link_to "Remove", bookmark_path(bookmark), method: :delete, :class => 'btn btn-outline-light my-2 my-sm-0 ' %>
         </div>
       </div>
     <% end %>
